<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
<group android:id="@+id/menu_top"
   >
    <item
        android:id="@+id/menu_pay_fee"
        android:icon="@drawable/online_payment"
        android:title="@string/string_menu_pay_fee"
        android:checkable="true"
        android:enabled="true" />

    <item
        android:id="@+id/menu_edit_profile"
        android:icon="@drawable/ic_menu_edit_profile"
        android:title="@string/string_menu_edit_profile"
        android:enabled="true"
        android:checkable="true" />

    <item
        android:id="@+id/menu_upload_photo"
        android:icon="@drawable/upload_photos"
        android:title="@string/string_menu_upload_photo"
        android:enabled="true"
        android:checkable="true" />

    <item
        android:id="@+id/manu_search"
        android:title="@string/string_menu_search"
        android:icon="@drawable/search_icon"
        android:enabled="true"
        android:checkable="true" />

    <item
        android:id="@+id/menu_match_list"
        android:icon="@drawable/ic_menu_fedback"
        android:title="@string/string_menu_match_list"
        android:enabled="true"
        android:checkable="true" />

    <item
        android:id="@+id/menu_interest_received"
        android:icon="@drawable/intrest_recieve"
        android:title="@string/string_menu_interest_received"
        android:enabled="true"
        android:checkable="true" />

    <item
        android:id="@+id/menu_interest_sent"
        android:icon="@drawable/intrest_send"
        android:title="@string/string_menu_interest_sent"
        android:enabled="true"
        android:checkable="true" />

    <item
        android:id="@+id/menu_register_sms"
        android:icon="@drawable/register_number_recieved_for_sms"
        android:title="@string/string_menu_iregister_sms"
        android:enabled="true"
        android:checkable="true" />

    <item
        android:id="@+id/menu_online_payment"
        android:checked="false"
        android:icon="@drawable/online_payment"
        android:title="@string/string_menu_online_payment"
        android:enabled="true"
        android:checkable="true" />

    <item
        android:id="@+id/menu_feedback"
        android:checked="false"
        android:icon="@drawable/ic_menu_fedback"
        android:title="@string/string_menu_feedback"
        android:enabled="true"
        android:checkable="true" />
    <item
        android:id="@+id/menu_chnage_password"
        android:checked="false"
        android:icon="@drawable/icon_change_password"
        android:title="@string/string_menu_change_password"
        android:enabled="true"
        android:checkable="true" />
    <item
        android:id="@+id/menu_cancel_membership"
        android:checked="false"
        android:icon="@drawable/ic_cancel_membership"
        android:title="@string/string_menu_change_membership"
        android:enabled="true"
        android:checkable="true" />
</group>
<group android:id="@+id/menu_bottom"
    android:checkableBehavior="none">
    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/ic_menu_logout"
        android:title="@string/string_menu_logout" />
</group>
</menu>