<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mypc.reshimbandh.Fragments.ChnagePasswordFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/size_20"
        android:orientation="vertical">

        <!-- Cast-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_old_password"
            android:layout_marginTop="@dimen/size_20"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_30"
            android:background="@null"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray"/>
        <!-- Cast-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_password"
            android:layout_marginTop="@dimen/size_20"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_30"
            android:background="@null"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray"/>
        <!-- Cast-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_confirm_password"
            android:layout_marginTop="@dimen/size_20"
            />
        <EditText
            android:id="@+id/edit_reg_step1_cast"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_30"
            android:background="@null"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray"/>
        <Button
            android:id="@+id/btn_stepone_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorDark"
            android:text="Submit"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="@dimen/size_10"
            />
    </LinearLayout>

</FrameLayout>
